--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>registro legal</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
+    <title>formulario deslizante</title>
 </head>
+
 <body>
-    
+    <div class="container right-panel">
+        <div class="container-form container-register">
+            <form action="#" class="form" id="form1">
+                <h2 class="form-title">Registrar-se</h2>
+                <input type="text" placeholder="Usuário" class="input">
+                <input type="email" placeholder="Email" class="input">
+                <input type="password" placeholder="Senha" class="input">
+                <button class="btn">Registrar-se</button>
+            </form>
+        </div>
+
+        <div></div>    
+
+    </div>
 </body>
+
 </html>
