--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
                 <input type="text" placeholder="Usuário" class="input">
                 <input type="email" placeholder="Email" class="input">
                 <input type="password" placeholder="Senha" class="input">
-                <button class="btn">Registrar-se</button>
+                <button class="button">Registrar-se</button>
             </form>
         </div>
 
-        <div></div>    
+        <div class="container-form container-login">
+            <form action="#" class="form" id="form2">
+                <h2 class="form-title">Login</h2>
+                <input type="email" placeholder="Email" class="input">
+                <input type="password" placeholder="Senha" class="input">
+                <a href="#" class="link">Esqueceu sua senha?</a>
+                <button class="button">Login</button>
+            </form>
+        </div>    
 
     </div>
 </body>
