--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
                 <a href="#" class="link">Esqueceu sua senha?</a>
                 <button class="button">Login</button>
             </form>
-        </div>    
-
+        </div>
+        
+        <div class="container-overlay">
+            <div class="overlay">
+                <div class="overlay-panel overlay-left">
+                    <button class="button" id="signIN">Login</button>
+                </div>
+                <div class="overlay-panel overlay-right">
+                    <button class="button" id="signUP">Registrar-se</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
