create main.js and form-title.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="components/body.css">
+    <link rel="stylesheet" href="components/root.css">
+    <link rel="stylesheet" href="components/form-title.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
