create link.css and container.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="components/body.css">
     <link rel="stylesheet" href="components/root.css">
     <link rel="stylesheet" href="components/form-title.css">
+    <link rel="stylesheet" href="components/link.css">
+    <link rel="stylesheet" href="components/container.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
