--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="components/form-title.css">
     <link rel="stylesheet" href="components/link.css">
     <link rel="stylesheet" href="components/container.css">
+    <link rel="stylesheet" href="components/container-form.css">
+    <link rel="stylesheet" href="components/container--signin.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
