create container-overlay.css and overlay-panel.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="components/container-form.css">
     <link rel="stylesheet" href="components/container-login.css">
     <link rel="stylesheet" href="components/container-register.css">
+    <link rel="stylesheet" href="components/container-overlay.css">
+    <link rel="stylesheet" href="components/overlay-panel.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
