create overlay left and right .css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="components/container-register.css">
     <link rel="stylesheet" href="components/container-overlay.css">
     <link rel="stylesheet" href="components/overlay-panel.css">
+    <link rel="stylesheet" href="components/overlay-left.css">
+    <link rel="stylesheet" href="components/overlay-right.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
