--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="components/overlay-panel.css">
     <link rel="stylesheet" href="components/overlay-left.css">
     <link rel="stylesheet" href="components/overlay-right.css">
+    <link rel="stylesheet" href="components/button.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
