create form.css and input.css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="components/overlay-left.css">
     <link rel="stylesheet" href="components/overlay-right.css">
     <link rel="stylesheet" href="components/button.css">
+    <link rel="stylesheet" href="components/form.css">
+    <link rel="stylesheet" href="components/input.css">
     <script defer src="main.js"></script>
     <title>formulario deslizante</title>
 </head>
