create main.js and overlay.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="components/container-login.css">
     <link rel="stylesheet" href="components/container-register.css">
     <link rel="stylesheet" href="components/container-overlay.css">
+    <link rel="stylesheet" href="components/overlay.css">
     <link rel="stylesheet" href="components/overlay-panel.css">
     <link rel="stylesheet" href="components/overlay-left.css">
     <link rel="stylesheet" href="components/overlay-right.css">
@@ -26,11 +27,11 @@
     <div class="container right-panel">
         <div class="container-form container-register">
             <form action="#" class="form" id="form1">
-                <h2 class="form-title">Registrar-se</h2>
+                <h2 class="form-title">Registrar</h2>
                 <input type="text" placeholder="Usuário" class="input">
                 <input type="email" placeholder="Email" class="input">
                 <input type="password" placeholder="Senha" class="input">
-                <button class="button">Registrar-se</button>
+                <button class="button">Registrar</button>
             </form>
         </div>
 
@@ -50,7 +51,7 @@
                     <button class="button" id="signIN">Login</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <button class="button" id="signUP">Registrar-se</button>
+                    <button class="button" id="signUP">Registrar</button>
                 </div>
             </div>
         </div>
