--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="container-form container-register">
             <form action="#" class="form" id="form1">
                 <h2 class="form-title">Registrar</h2>
-                <input type="text" placeholder="Usuário" class="input">
-                <input type="email" placeholder="Email" class="input">
-                <input type="password" placeholder="Senha" class="input">
+                <input type="text" placeholder="Usuário" class="input" />
+                <input type="email" placeholder="Email" class="input" />
+                <input type="password" placeholder="Senha" class="input" />
                 <button class="button">Registrar</button>
             </form>
         </div>
@@ -38,8 +38,8 @@
         <div class="container-form container-login">
             <form action="#" class="form" id="form2">
                 <h2 class="form-title">Login</h2>
-                <input type="email" placeholder="Email" class="input">
-                <input type="password" placeholder="Senha" class="input">
+                <input type="email" placeholder="Email" class="input" />
+                <input type="password" placeholder="Senha" class="input" />
                 <a href="#" class="link">Esqueceu sua senha?</a>
                 <button class="button">Login</button>
             </form>
